final tweeks before submit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <div class="statustext-container">
-        <div class="targetcont">
+       <div id="emptyspace-div"></div> 
+       <div class="targetcont">
+            
 
             <div id="target-text">
                 <!-- Target number displayed here -->
@@ -30,7 +32,7 @@
     </div>
     <div id="instructions-text">
         <p>Your goal is to reach the target number exactly, each jewel below has a random value that will be </p>
-        <p> added to your total each time it is clicked. Don't go over the target value!!</p>
+        <p> added to your total each time it is clicked. Don't go over the target value or you will lose!!</p>
     </div>
 
 
